--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <li class="nav-item"><a href="https://www.instagram.com/i_am_omen/" class="nav-link px-2 text-body-secondary">Instagram</a></li>
       <li class="nav-item"><a href="https://open.spotify.com/artist/7gLXw7lLcnPbNVyv6JvAZQ?si=lMHuK6KQR7OVZWZsgH8Y7w" class="nav-link px-2 text-body-secondary">Spotify</a></li>
     </ul>
-    <p class="text-center text-body-secondary">© 2023 , Inc</p>
+    <p class="text-center text-body-secondary">© IT 2023 , Inc</p>
   </footer>
 </div>
 <link rel="preconnect" href="https://fonts.googleapis.com">
