--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <img class="d-block mx-auto mb-4" src="./Images/envelope-at.svg" alt="" width="72" height="57">
     <h1 class="display-5 fw-bold text-body-emphasis"></h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Contact?</p>
+      <p class="lead mb-4">Contact Me</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <a class="btn btn-outline-success" btn-lg px-4 gap-3" href="mailto:noel.pena@hotmail.com">Click Me</a>
       </div>
@@ -70,7 +70,7 @@
       <li class="nav-item"><a href="https://www.instagram.com/i_am_omen/" class="nav-link px-2 text-body-secondary">Instagram</a></li>
       <li class="nav-item"><a href="https://open.spotify.com/artist/7gLXw7lLcnPbNVyv6JvAZQ?si=lMHuK6KQR7OVZWZsgH8Y7w" class="nav-link px-2 text-body-secondary">Spotify</a></li>
     </ul>
-    <p class="text-center text-body-secondary">© 2023 , Inc</p>
+    <p class="text-center text-body-secondary">© 2023  IT, Inc</p>
   </footer>
 </div>
 <link rel="preconnect" href="https://fonts.googleapis.com">
