--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <p class="text-center text-body-secondary">© 2023 Noel Pena, Inc</p>
   </footer>
 </div>
+<link>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
