--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <!--Header-->
     <div class="px-4 py-5 my-5 mt-0 mb-0 text-center">
         <img class="d-block mx-auto mb-5" src="./Images/Profile Picture.png" alt="Profile-Pic" width="200">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-size: 5rem;"><span>Hello!</span></h1>
+        <h1 class="display-5 fw-bold text-body-emphasis" style="font-size: 5rem;" id="main"><span>Hello!</span></h1>
         <div class="col-lg-6 mx-auto mt-5">
-          <p class="lead mb-5" style="color: #2c4337;">My name is Noel Pena.<br><span style="font-size: 8px; font-style: italic; color: #2c4337;">"Hard work beats talent when talent doesn't work hard." - Tim Notke</span></p>
+          <p class="lead mb-5">My name is Noel Pena.<br><span style="font-size: 8px; font-style: italic; color: #2c4337;">"Hard work beats talent when talent doesn't work hard." - Tim Notke</span></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           </div>
         </div>
@@ -21,7 +21,7 @@
 <!--Bio-->
 <main>
     <div id="bio" class="album py-5 bg--tertiary pt-0 mt-0">
-      <h1 style="text-align: center; padding-top: 30px; font-family: 'Lato', sans-serif; color: #FAF1E4; margin-bottom: 0;">Skills</h1>
+      <h1 style="text-align: center; padding-top: 30px; font-family: 'Lato', sans-serif; margin-bottom: 0;">Skills</h1>
       <div class="container pt-5">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
@@ -64,7 +64,7 @@
     </div>
   </div>
 <!--Footer-->
-<div class="m-0 container-fluid mt-0 pt-0 mb-0 pb-0" style="background-color: #CEDEBD;">
+<div class="m-0 container-fluid mt-0 pt-0 mb-0 pb-0 footer" style="background-color: #CEDEBD;">
   <footer class="py-3 my-0">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="https://www.instagram.com/i_am_omen/" class="nav-link px-2 text-body-secondary">Instagram</a></li>
