--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./CSS/Style.css">
 </head>
 <body>
+
 <!--Header-->
+
     <div class="px-4 py-5 my-5 mt-0 mb-0 text-center">
         <img class="d-block mx-auto mb-5" src="./Images/Profile Picture.png" alt="Profile-Pic" width="200">
         <h1 class="display-5 fw-bold text-body-emphasis" style="font-size: 5rem;" id="main"><span>Hello!</span></h1>
@@ -18,7 +20,9 @@
           </div>
         </div>
     </div>
+
 <!--Bio-->
+
 <main>
     <div id="bio" class="album py-5 bg--tertiary pt-0 mt-0">
       <h1 style="text-align: center; padding-top: 30px; font-family: 'Lato', sans-serif; margin-bottom: 0;">Skills</h1>
@@ -52,7 +56,9 @@
       </div>
     </div>
 </main>
+
 <!--Contact-->
+
 <div class="px-4 py-5 my-5 mt-0 mb-0 text-center" style="background-color: rgb(250, 255, 237);">
     <img class="d-block mx-auto mb-4" src="./Images/envelope-at.svg" alt="" width="72" height="57">
     <h1 class="display-5 fw-bold text-body-emphasis"></h1>
@@ -63,14 +69,16 @@
       </div>
     </div>
   </div>
+
 <!--Footer-->
+
 <div class="m-0 container-fluid mt-0 pt-0 mb-0 pb-0 footer" style="background-color: #CEDEBD;">
   <footer class="py-3 my-0">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="https://www.instagram.com/i_am_omen/" class="nav-link px-2 text-body-secondary">Instagram</a></li>
       <li class="nav-item"><a href="https://open.spotify.com/artist/7gLXw7lLcnPbNVyv6JvAZQ?si=lMHuK6KQR7OVZWZsgH8Y7w" class="nav-link px-2 text-body-secondary">Spotify</a></li>
     </ul>
-    <p class="text-center text-body-secondary footer">© 2023 Noel Pena, Inc</p>
+    <p class="text-center text-body-secondary footer">© 2023 Pena, Inc</p>
   </footer>
 </div>
 <link>
