--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Header-->
 
     <div class="px-4 py-5 my-5 mt-0 mb-0 text-center">
-        <img class="d-block mx-auto mb-5" src="./Images/Profile Picture.png" alt="Profile-Pic" width="200">
+        <img class="d-block mx-auto mb-5" src="./Images/IMG_0430.PNG" alt="Profile-Pic" width="200" style="border-radius: 50%;">
         <h1 class="display-5 fw-bold text-body-emphasis" style="font-size: 5rem;" id="main"><span>Hello!</span></h1>
         <div class="col-lg-6 mx-auto mt-5">
           <p class="lead mb-5">My name is Noel Pena.<br><span style="font-size: 8px; font-style: italic; color: #2c4337;">"Hard work beats talent when talent doesn't work hard." - Tim Notke</span></p>
@@ -27,31 +27,29 @@
     <div id="bio" class="album py-5 bg--tertiary pt-0 mt-0">
       <h1 style="text-align: center; padding-top: 30px; font-family: 'Lato', sans-serif; margin-bottom: 0;">Skills</h1>
       <div class="container pt-5">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
           <div class="col">
             <div class="card shadow-sm">
               <img src="./Images/WebDevelopment.png" class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="5%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Web Development</text>
               <div class="card-body">
-                <p class="card-text">I grew a passion for technology since I was a child. I have strong aspiriations to become a programmer. I specialize in JavaScript.</p>
-              </div>
+                <p class="card-text">
+
+HTML 5 • CSS • Flexbox • Grid • Bootstrap 5 • Javascript ES6 • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Authentication • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages</p>
+</div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="./Images/DSC_4933.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Photography</text></svg>
+              <img src="./Images/DSC_4933.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Leadership/Admin</text></svg>
               <div class="card-body">
-                <p class="card-text">I have a large catalogue of photos through my Instagram. If I'm not coding or working on music then I am taking pciture!</p>
+                <p class="card-text">Excellent communication, leadership and problem-solving skills
+                  Excellent organizational skills: time management, prioritization, planning, scheduling, multitasking, etc.
+                  Excellent interpersonal skills: empathy, emotional intelligence, conflict resolution, negotiation, persuasion, etc.
+                  Excellent analytical skills: data analysis, research, critical thinking, logic, etc.</p>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="./Images/music-production.jpeg" class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Music Production</text></svg>
-              <div class="card-body">
-                <p class="card-text">I've been producing music as a hobby for over a decade. Find my music on Spotify or any other big music streaming platform</p>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
@@ -73,12 +71,13 @@
 <!--Footer-->
 
 <div class="m-0 container-fluid mt-0 pt-0 mb-0 pb-0 footer" style="background-color: #CEDEBD;">
-  <footer class="py-3 my-0">
+  <footer class="py-3 my-0 footer">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="https://www.instagram.com/i_am_omen/" class="nav-link px-2 text-body-secondary">Instagram</a></li>
       <li class="nav-item"><a href="https://open.spotify.com/artist/7gLXw7lLcnPbNVyv6JvAZQ?si=lMHuK6KQR7OVZWZsgH8Y7w" class="nav-link px-2 text-body-secondary">Spotify</a></li>
     </ul>
-    <p class="text-center text-body-secondary footer">© 2023 Noel Pena, Inc</p>
+    <ul id="foot"> Noel Pena, Inc
+    </ul>
   </footer>
 </div>
 <link>
