--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="./Images/WebDevelopment.png" class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="5%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Web Development</text>
+              <img src="./Images/WebDevelopment.png" class="bd-placeholder-img card-img-top" width="100%" height="350px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="5%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Web Development</text>
               <div class="card-body">
                 <p class="card-text">
-
-HTML 5 • CSS • Flexbox • Grid • Bootstrap 5 • Javascript ES6 • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Authentication • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages</p>
-</div>
+                  HTML 5 • CSS • Flexbox • Grid • Bootstrap 5 • Javascript ES6 • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Authentication • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages
+                </p>
+            </div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="./Images/DSC_4933.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Leadership/Admin</text></svg>
+              <img src="./Images/DSC_4933.jpg" class="bd-placeholder-img card-img-top" width="100%" height="350px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Leadership | Admin</text></svg>
               <div class="card-body">
                 <p class="card-text">Excellent communication, leadership and problem-solving skills
                   Excellent organizational skills: time management, prioritization, planning, scheduling, multitasking, etc.
                   Excellent interpersonal skills: empathy, emotional intelligence, conflict resolution, negotiation, persuasion, etc.
-                  Excellent analytical skills: data analysis, research, critical thinking, logic, etc.</p>
+                  Excellent analytical skills: data analysis, research, critical thinking, logic, etc.
+                </p>
               </div>
             </div>
           </div>
