--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   </footer>
 </div>
 <link>
+<script src="./index.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
