--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <div class="px-4 py-5 my-5 mt-0 mb-0 text-center">
         <img class="d-block mx-auto mb-5" src="./Images/IMG_0430.PNG" alt="Profile-Pic" width="200" style="border-radius: 50%;">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-size: 5rem;" id="main"><span>Hello!</span></h1>
+        <h1 class="display-5 fw-bold text-body-emphasis" style="font-size: 5rem;" id="main"><span id="greet">Hello!</span></h1>
         <div class="col-lg-6 mx-auto mt-5">
-          <p class="lead mb-5">My name is Noel Pena.<br><span style="font-size: 8px; font-style: italic; color: #2c4337;">"Hard work beats talent when talent doesn't work hard." - Tim Notke</span></p>
+          <p class="lead mb-5">My name is Noel Pena.<br><span style="font-size: 10px; font-style: italic; color: #2c4337;">"Hard work beats talent when talent doesn't work hard." - Tim Notke</span></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           </div>
         </div>
@@ -29,19 +29,19 @@
       <div class="container pt-5">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-sm" id="textbox">
               <img src="./Images/WebDevelopment.png" class="bd-placeholder-img card-img-top" width="100%" height="350px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="5%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Web Development</text>
-              <div class="card-body">
+              <div class="card-body" id="textbox">
                 <p class="card-text">
-                  HTML 5 • CSS • Flexbox • Grid • Bootstrap 5 • Javascript ES6 • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Authentication • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages
+                  HTML • CSS • Flexbox • Grid • Bootstrap • Javascript • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Mysql • Authentication • oauth • Password bashing • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages
                 </p>
             </div>
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-sm" id="textbox">
               <img src="./Images/DSC_4933.jpg" class="bd-placeholder-img card-img-top" width="100%" height="350px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Leadership | Admin</text></svg>
-              <div class="card-body">
+              <div class="card-body" id="textbox">
                 <p class="card-text">Excellent communication, leadership and problem-solving skills
                   Excellent organizational skills: time management, prioritization, planning, scheduling, multitasking, etc.
                   Excellent interpersonal skills: empathy, emotional intelligence, conflict resolution, negotiation, persuasion, etc.
