--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <img src="./Images/WebDevelopment.png" class="bd-placeholder-img card-img-top" width="100%" height="350px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="5%" y="50%" fill="#eceeef" dy=".3em" style="text-align: center; font-family:'Lato', sans-serif; padding-top: 5px;">Web Development</text>
               <div class="card-body" id="textbox">
                 <p class="card-text">
-                  HTML • CSS • Flexbox • Grid • Bootstrap • Javascript • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Mysql • Authentication • oauth • Password bashing • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages
+                  HTML • CSS • Flexbox • Grid • Bootstrap • Javascript • DOM Manipulation • jQuery • Bash Command Line • Git, GitHub and Version Control • Backend Web Development • Node.js • NPM • Express.js • EJS • REST • APIs • Databases • SQL • PostgreSQL • Mysql • Authentication • oauth • Password hashing • Firebase • React.js • React Hooks • Web Design • Deployment with GitHub Pages
                 </p>
             </div>
             </div>
